--- a/School-Managment-Frontend/src/main/web/src/app/area/area-overview/area-overview.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/area/area-overview/area-overview.component.html
@@ -6,6 +6,6 @@
     <app-show-list [area]="area"></app-show-list>
   </div>
   <div class="p-col-12 p-md-6">
-    <app-monitor-dashboard [area]="area"></app-monitor-dashboard>
+    <app-monitor-dashboard editMonitorImageShow="true" [area]="area"></app-monitor-dashboard>
   </div>
 </div>
