--- a/School-Managment-Frontend/src/main/web/src/app/header/header.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/header/header.component.html
@@ -4,18 +4,18 @@
         <span class="title-label">{{'header.title' | translate }}</span>
         <nav *ngIf="isAuthenticated" class="toolbar-navigation">
             <span *ngIf="areas.length> 0">
-                <a [class]="router.isActive('photoshow/areas', false)? 'active-link':''"
+                <a [class]="router.isActive('imageshow/areas', false)? 'active-link':''"
                     (click)="areamenu.toggle($event)">{{'header.areas' | translate }}</a>
                 <p-menu #areamenu [popup]="true" [model]="areas"> </p-menu>
             </span>
             <span *ngIf="(authService.hasPrivileges(['WRITE_IMAGE_SHOW']))">
-                <a [routerLink]="'photoshow/edit'" [class]="router.isActive('photoshow/edit', false)? 'active-link':''"
+                <a [routerLink]="'imageshow/edit'" [class]="router.isActive('imageshow/edit', false)? 'active-link':''"
                     routerLinkActive="active-link">{{'header.image-shows' | translate }}</a>
             </span>
             <span *ngIf="(authService.hasPrivileges(['READ_MONITORS']))">
                 <!-- <a [routerLink]="'photoshow/monitors'" routerLinkActive="active-link">{{'header.monitors' | translate
                     }}</a> -->
-                <a [class]="router.isActive('photoshow/monitors', false)? 'active-link':''"
+                <a [class]="router.isActive('imageshow/monitors', false)? 'active-link':''"
                     (click)="monitormenu.toggle($event)">{{'header.monitors' | translate }}</a>
                 <p-menu #monitormenu [popup]="true" [model]="monitorMenu"> </p-menu>
             </span>
