--- a/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.scss
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.scss
@@ -30,3 +30,14 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+.insert-document-button {
+  margin-top: 6rem;
+}
+
+.indevidualDisplayTimeCard {
+  margin-top: 0.45rem;
+  padding-right: 0.2rem;
+  padding-left: 0.2rem;
+  border: 2px solid gray;
+  border-radius: 3px;
+}
