--- a/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.html
@@ -23,16 +23,16 @@
             </div>
         </div>
 
-        <div class="p-field p-col-12 p-md-6">
+        <div class="p-field p-col-12">
             <div class="p-inputgroup">
                 <span class="p-inputgroup-addon">{{'edit-show-panel.displayTime' | translate }}</span>
-                <p-selectButton [options]="displayTimeOptions" [(ngModel)]="individualDisplayTime">
+                <p-selectButton [options]="displayTimeOptions" [(ngModel)]="imageShow.individualDisplayTimes">
                     <ng-template let-item>
                         <span>{{item.label | translate}}</span>
                     </ng-template>
                 </p-selectButton>
                 <p-inputNumber [(ngModel)]="displayTime" mode="decimal" [showButtons]="true" [min]="0" [max]="20"
-                    suffix="{{ ' ' + ('edit-show-panel.seconds'|translate)}}" *ngIf="!individualDisplayTime">
+                    suffix="{{ ' ' + ('edit-show-panel.seconds'|translate)}}" *ngIf="!imageShow.individualDisplayTimes">
                 </p-inputNumber>
             </div>
         </div>
@@ -47,7 +47,8 @@
                         <div class="example-box" *ngFor="let showPart of imageShow.showParts; index as i;" cdkDrag
                             cdkDropList [cdkDragData]="showPart">
 
-                            <div class="p-fluid" pBadge [value]="showPart.displayTime + 's'">
+                            <div class="p-fluid" pBadge
+                                [value]="(imageShow.individualDisplayTimes ? showPart.displayTime : displayTime) + 's'">
                                 <div class="p-field">
                                     <div class="p-card" [style]="showPart.active? null : {opacity: 0.5}">
                                         <img [src]="getImage(showPart.showPartImage)" height="200px">
@@ -70,7 +71,7 @@
                                     </p-button>
 
                                     <div class="p-field p-d-flex p-ai-baseline indevidualDisplayTimeCard"
-                                        *ngIf="individualDisplayTime">
+                                        *ngIf="imageShow.individualDisplayTimes">
                                         <div>
                                             <p-inputNumber [(ngModel)]="showPart.displayTime" mode="decimal" [min]="0"
                                                 [max]="100" inputStyleClass="indevidualDisplayTime">
