Added Clock Addon

--- a/School-Managment-Frontend/src/main/web/src/app/image-show/show/show.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/show/show.component.html
@@ -1,3 +1,4 @@
+<app-clock></app-clock>
 <p-carousel [(value)]="showParts" (onPage)="pageChanged($event)" [showNavigators]="false" [page]="page">
     <ng-template pTemplate="item" let-showPart>
         <div class="p-grid p-jc-center">
