--- a/School-Managment-Frontend/src/main/web/src/styles.scss
+++ b/School-Managment-Frontend/src/main/web/src/styles.scss
@@ -56,6 +56,16 @@ a {
         width: 1.5rem !important;
         background: transparent;
         padding: 0.1rem;
-        border:0ch;
+        border: 0ch;
+    }
+}
+.clock-dialog {
+    .p-dialog .p-dialog-content {
+        padding: 1rem;
+        border-radius: 15px;
+        overflow-y: inherit;
+        font: 400 14px/20px Roboto, "Helvetica Neue", sans-serif;
+        background-color: rgba($secondary-color, 0.25);
+        color: $secondary-color;
     }
 }
