Started on Messages.

--- a/School-Managment-Frontend/src/main/web/src/app/image-show/show/show.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/show/show.component.html
@@ -1,4 +1,5 @@
 <app-clock></app-clock>
+<app-message-banner></app-message-banner>
 <p-carousel [(value)]="showParts" (onPage)="pageChanged($event)" [showNavigators]="false" [page]="page">
     <ng-template pTemplate="item" let-showPart>
         <div class="p-grid p-jc-center">
