Continued with the implementation

--- a/School-Managment-Frontend/src/main/web/src/app/addons/clock/clock.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/addons/clock/clock.component.html
@@ -1,7 +1,7 @@
-<div class="clock-dialog">
-    <p-dialog [(visible)]="display" [closable]="false" [showHeader]="false" [position]="'bottom-left'"
-        [style]="{width: 'auto', height: 'auto', 'border-radius': '15px'}">
-        <div class="p-grid p-jc-center p-p-4 p-nogutter p-ai-center">
+<div class="disable-footer-clock">
+    <p-dialog [(visible)]="display" [closable]="false" [showHeader]="false" [position]="'top-right'"
+        [style]="{width: '15vw',  'border-radius': '15px'}">
+        <div class="p-grid p-jc-center p-nogutter p-ai-center">
             <span class="p-text-center digits">{{ rxTime | date:"HH:mm" }}</span>
         </div>
     </p-dialog>
