--- a/School-Managment-Frontend/src/main/web/src/app/area/area-overview/area-overview.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/area/area-overview/area-overview.component.html
@@ -8,4 +8,7 @@
   <div class="p-col-12 p-md-6">
     <app-monitor-dashboard editMonitorImageShow="true" [area]="area"></app-monitor-dashboard>
   </div>
+  <!-- <div class="p-col-12 p-md-6">
+    <app-send-message [area]="area"></app-send-message>
+  </div> -->
 </div>
