Got a lot done with Messageing

--- a/School-Managment-Frontend/src/main/web/src/app/area/area-overview/area-overview.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/area/area-overview/area-overview.component.html
@@ -1,5 +1,5 @@
 <div class="p-text-center p-grid p-mt-2 p-jc-center">
-    <h1 class="p-card p-p-2 area-heading">{{area | translate}}</h1>
+  <h1 class="p-card p-p-2 area-heading">{{area | translate}}</h1>
 </div>
 <div class="p-grid p-mt-2">
   <div class="p-col-12 p-md-6">
@@ -8,7 +8,7 @@
   <div class="p-col-12 p-md-6">
     <app-monitor-dashboard editMonitorImageShow="true" [area]="area"></app-monitor-dashboard>
   </div>
-  <!-- <div class="p-col-12 p-md-6">
+  <div class="p-col-12 p-md-6">
     <app-send-message [area]="area"></app-send-message>
-  </div> -->
+  </div>
 </div>
